# MechMath-4th-year-thesis

./: README.md
FiniteElementMethod/: prepare.py
FiniteElementMethod/FEMproject/fem/: CMakeLists.txt
FiniteElementMethod/FEMproject/inputs/: input2.txt
FiniteElementMethod/final_results/: output.txt  results.vtk
FiniteElementMethod/prepare_mesh_lib/: file_reader.py  file_reader2.py
FiniteElementMethod/prepared_meshes/rect/: constraints.txt  loads.txt
FiniteElementMethod/prepared_meshes/small_rect/: constraints.txt  elements.txt  loads.txt  nodes.txt
FiniteElementMethod/prepared_meshes/test_rect/: loads.txt
FiniteElementMethod/raw_meshes/: rect.k  small_rect.k  test_rect.k
FiniteElementMethod3D/FEMproject/: CMakeLists.txt
FiniteElementMethod3D/FEMproject/Linal2/: CMakeLists.txt
FiniteElementMethod3D/FEMproject/results/: output_test3.txt
cuda-template-master/: CMakeLists.txt
cuda-template-master/CudaLib/: CMakeLists.txt
cuda-template-master/CudaLib/include/: init.h
cuda-template-master/CudaLib/src/: init.cu
cuda-template-master/CudaTest/: CMakeLists.txt
cuda-template-master/CudaTest/include/: CudaTest.h
cuda-template-master/CudaTest/src/: CudaTest.cu
cuda-template-master/Linal2/src/: Linal2.cpp  Linal2.h
cuda-template-master/VTKfile/src/: VTKfile.cpp  VTKfile.h
cuda-template-master/fem/src/: main.cpp
cuda-template-master3D/build-cuda-template-master-Desktop_x86_windows_msvc2019_pe_64bit-Release/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake
cuda-template-master3D/build-cuda-template-master-Desktop_x86_windows_msvc2019_pe_64bit-Release/CudaLib/: cmake_install.cmake  simplecuda.lib
cuda-template-master3D/cuda-template-master/: CMakeLists.txt  CMakeLists.txt.user.720a519
fem2d/: deleteme.txt
(+37 files in other folders)
