cmake_minimum_required(VERSION 2.8)
find_package(CUDA QUIET REQUIRED)

MESSAGE(STATUS "${CUDA_NVCC_FLAGS}")

set(CUDA_64_BIT_DEVICE_CODE ON)
set(CUDA_NVCC_FLAGS "${CUDA_NVCC_FLAGS} -std=c++11 -arch=sm_52" )

MESSAGE(STATUS "${CUDA_NVCC_FLAGS}")

#INCLUDE_DIRECTORIES(
#    include
#)

CUDA_ADD_LIBRARY(
    testcuda
    src/CudaTest.cu
    include/CudaTest.h
)
TARGET_LINK_LIBRARIES(testcuda ${CUDA_LIBRARIES} ${CUDA_CUBLAS_LIBRARIES} ${CUDA_CUSPARSE_LIBRARIES})
TARGET_INCLUDE_DIRECTORIES(testcuda PUBLIC include)
